--- a/src/input.css
+++ b/src/input.css
@@ -5,17 +5,22 @@
 @font-face {
   font-family: "sweetAloha";
   src: local("sweetAloha"),
-   url(/src/assets/fonts/SweetAloha.ttf) format("truetype");
+  url(/src/assets/fonts/SweetAloha.ttf) format("truetype");
 }
 @font-face {
   font-family: "playfair";
   src: local("playfair"),
-   url(/src/assets/fonts/PlayfairDisplay-VariableFont_wght.ttf) format("truetype");
+  url(/src/assets/fonts/PlayfairDisplay-VariableFont_wght.ttf) format("truetype");
 }
 @font-face {
   font-family: "caviarDreams";
   src: local("caviarDreams"),
-   url(/src/assets/fonts/CaviarDreams.ttf) format("truetype");
+  url(/src/assets/fonts/CaviarDreams.ttf) format("truetype");
+}
+@font-face {
+  font-family: "caviarDreamsBold";
+  src: local("caviarDreamsBold"),
+  url(/src/assets/fonts/CaviarDreams_Bold.ttf) format("truetype");
 }
 
 
@@ -24,8 +29,8 @@
   background-size: 100vw 100vh;
   background-size: cover;
   height: 100vh;
-  font-family: 'caviarDreams';
-  font-size: 24px;
+  font-family: 'caviarDreamsBold';
+  font-size: 20px;
   color: #3F474F;
   text-align: center;
   display: flex;
@@ -35,7 +40,7 @@
 
 @layer components {
   button {
-    @apply bg-beige rounded-lg p-2 text-champagne my-1 disabled:opacity-40
+    @apply bg-beige rounded-lg p-2 text-champagne my-1 disabled:opacity-40 shadow
   }
   h1 {
     @apply font-serif text-grey text-xl leading-10 uppercase
