--- a/src/input.css
+++ b/src/input.css
@@ -38,7 +38,7 @@
 
 @layer components {
   button {
-    @apply bg-beige rounded-lg p-2 text-champagne text-xs my-1 disabled:opacity-40 shadow uppercase
+    @apply cursor-pointer bg-beige rounded-lg p-2 text-champagne text-xs my-1 disabled:opacity-40 shadow uppercase
   }
   h1 {
     @apply font-serif text-grey text-lg leading-10 uppercase
